#INNOVATION-92 by magnify: Fixed page spacing

--- a/innovationscenteret/scss/layout/_layout.scss
+++ b/innovationscenteret/scss/layout/_layout.scss
@@ -55,25 +55,13 @@ body, html {
 
 .is-page {
   main[role=main] {
-    padding-top: 5.5em;
-  }
-
-  @include breakpoint($breakpoint-desk) {
-    main[role=main] {
-      padding-top: 4.75em;
-    }
-  }
-
-  @include breakpoint($breakpoint-bigscreen) {
-    main[role=main] {
-      padding-top: 8em;
-    }
+    padding-top: 8em;
   }
 }
 
 main[role=main] {
   margin-right: auto;
-  margin-bottom: 5.5em;
+  margin-bottom: 8em;
   margin-left: auto;
   max-width: $breakpoint-desk;
 
