--- a/innovationscenteret/scss/modules/_content.scss
+++ b/innovationscenteret/scss/modules/_content.scss
@@ -17,6 +17,7 @@
   }
 
   &--image-wrapper {
+    margin-top: -2.5em;
     margin-right: -6em;
     margin-bottom: 2.5em;
     margin-left: -6em;
@@ -36,6 +37,16 @@
   @include breakpoint($breakpoint-desk) {
     &--header {
       font-size: 4em;
+    }
+
+    &--image-wrapper {
+      margin-top: -3.25em;
+    }
+  }
+
+  @include breakpoint($breakpoint-bigscreen) {
+    &--image-wrapper {
+      margin-top: 0;
     }
   }
 }
